# maintainers-and-authors

./: README.md  pyproject.toml
src/maintainers_and_authors/: __about__.py  __main__.py  api.py  cli.py  core.py
src/maintainers_and_authors/cli/: __init__.py
